--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "web3-react-ethersjs-squid",
+  "name": "web3-react-ethersjs-web3js-example",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ethersproject/providers": "^5.0.0-beta.152",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
@@ -10,10 +11,13 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "@web3-react/core": "^6.0.7",
+    "@web3-react/injected-connector": "^6.0.7",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-scripts": "3.3.1",
-    "typescript": "~3.7.2"
+    "typescript": "~3.7.2",
+    "web3": "^1.2.6"
   },
   "scripts": {
     "start": "react-scripts start",
